@@ -1,3 +1,14 @@
+Sun Mar 20 17:39:18 2005  Jaiganesh B <jai@dre.vanderbilt.edu>
+	* ciao/Servant_Impl_Base.h:
+	* ciao/Servant_Impl_Base.cpp:
+	* ciao/Servant_Impl_T.h:
+	* ciao/Servant_Impl_T.cpp:
+	* ciao/Home_Servant_Impl_T.cpp:
+
+          Made changes to the older version of the ciao
+          infrastructure to reflect changes made in the
+          newer version of ciao, which is DaNCE.
+
 Sun Mar 20 10:09:14 2005  Will Otte <wotte@dre.vanderbilt.edu>
 	* DAnCE/Config_Handlers/Basic_Handler.cpp
 	* DAnCE/Config_Handlers/Basic_Handler.h
